--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@apollo/server": "^4.0.5",
+    "@aws-sdk/lib-dynamodb": "^3.201.0",
     "@mysql/xdevapi": "8.0.22",
     "@types/bcrypt-nodejs": "0.0.31",
     "@types/cors": "^2.8.8",
@@ -10,7 +12,9 @@
     "@types/toobusy-js": "^0.5.2",
     "@types/uuid": "^8.0.1",
     "@types/winston": "^2.4.4",
+    "aws-sdk": "^2.1245.0",
     "bcrypt": "^5.0.0",
+    "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "color-string": "^1.6.0",
     "cookie-parser": "^1.4.5",
@@ -22,6 +26,8 @@
     "express-http-proxy": "^1.6.2",
     "express-rate-limit": "^5.1.3",
     "glob-parent": "^6.0.1",
+    "graphql": "^16.6.0",
+    "graphql-scalar": "^0.0.11",
     "http-proxy-middleware": "^2.0.1",
     "ini": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
@@ -31,6 +37,7 @@
     "node-cron": "^2.0.3",
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.4.17",
+    "restify": "^8.6.1",
     "sqlstring": "^2.3.2",
     "tar": "^6.1.11",
     "toobusy-js": "^0.5.1",
@@ -44,6 +51,7 @@
   "main": "nodejs.js",
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/bluebird": "^3.5.37",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.7",
     "@types/jsonwebtoken": "^8.5.0",
